--- a/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
@@ -162,7 +162,7 @@
                     <p:column headerText="zwykle rozrach szczegolne" style="width: 70px; text-align: center;">
                         <h:outputText value="#{loop.zwyklerozrachszczegolne.length() gt 4 ? loop.zwyklerozrachszczegolne.substring(0,4) : loop.zwyklerozrachszczegolne}" style="text-align: center;"/>
                     </p:column>
-                    <p:column headerText="bilans" style="width: 40px; text-align: center;">
+                    <p:column headerText="spraw." style="width: 40px; text-align: center;">
                         <h:outputText value="&#x2713;" rendered="#{loop.saldodosprawozdania eq true}" style="color: green;font-weight: 900;"/>
                     </p:column>
                      <p:column headerText="dwa salda" style="width: 40px; text-align: center;">
