--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKBilanse.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKBilanse.xhtml
@@ -54,6 +54,7 @@
                     <ui:include src="sub/dialog/dialog_bilans_otwarcia_przeglad.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilansBO_wyliczenie.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilans_wyliczenie_porownaniezBO.xhtml"/>
+                    <ui:include src="sub/dialog/dialog_bilans_wyliczenie_porownaniezBO_nowy.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilans_wyliczenie.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilans_wyliczenie_zapisy.xhtml"/>
                     <ui:include src="sub/dialog/dialog_bilans_przypisywanie_kont.xhtml"/>
