--- a/npkpir_23/web/ksiegowaFK/sub/menu/menubilanse.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menubilanse.xhtml
@@ -9,6 +9,8 @@
                 <p:tab title="#{mgs.Bilans}">
                     <h:form id="dialog1menu2">
                         <p:menu id="d1m2" styleClass="d1m" style="width: 400px; text-align: center; height: 450px;">
+                            <p:menuitem value="Nowy przegladaj Bilans porównanie" onclick="PF('dialogbilansporownanie_nowy').show();" actionListener="#{pozycjaBRZestawienieNowyView.obliczBilansOtwarciaBilansDataWybierz()}"
+                                        update=":form_dialogbilansporownanie_nowy"></p:menuitem>
                             <p:menuitem value="przegladaj Bilans porównanie" onclick="PF('dialogbilansporownanie').show();" actionListener="#{pozycjaBRView.obliczBilansOtwarciaBilansDataWybierz()}"
                                         update=":form_dialogbilansporownanie"></p:menuitem>
                             <p:menuitem value="przegladaj Bilans" onclick="PF('bilansprzegladuklad').show();" actionListener="#{pozycjaBRView.odswiezbilansdwiestrony()}"
