--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rzis_przypisywanie_kont_wzorcowy.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rzis_przypisywanie_kont_wzorcowy.xhtml
@@ -19,14 +19,11 @@
                     <h:outputText value="#{mgs.nazwaukładu}"/>
                     <p:selectOneMenu value="#{pozycjaBRKontaView.wybranyuklad}" converter="UkladBRWzorcowyConv" style="width: 200px;" >
                         <f:selectItems value="#{ukladBRWzorcowyView.lista}" var="loop" itemLabel="#{loop.uklad} - #{loop.rok}" itemValue="#{String.valueOf(loop.lp)}" />
-                        <p:ajax event="change" listener="#{pozycjaBRKontaView.pobierzukladkontoR()}" update=":formrzisuklad:dataList :formrzisuklad:dostepnekonta :formrzisuklad:selected"/>
+                        <p:ajax event="change" listener="#{pozycjaBRKontaView.zmienukladkontoR()}" update=":formrzisuklad:dataList :formrzisuklad:dostepnekonta :formrzisuklad:selected"/>
                     </p:selectOneMenu>
-                    <p:commandButton value="#{mgs.wybierzmcrok}" style="width: 120px;" type="submit" actionListener="#{pozycjaBRKontaView.pobierzukladkontoR()}" update=":formrzisuklad:dataList :formrzisuklad:dostepnekonta :formrzisuklad:selected"/>
+                    <p:commandButton value="#{mgs.wybierzmcrok}" style="width: 120px;" type="submit" actionListener="#{pozycjaBRKontaView.zmienukladkontoR()}" update=":formrzisuklad:dataList :formrzisuklad:dostepnekonta :formrzisuklad:selected"/>
                 </p:panelGrid>
-<!--                <p:commandButton id="rozwinwsz" value="rozwiń wszystkie" actionListener="#{pozycjaBRKontaView.rozwinwszystkie(rootProjektKonta)}" update=":formrzisuklad:dataList" style="float: left;" />
-                <p:commandButton id="rozwin" value="rozwiń poziom" actionListener="#{pozycjaBRKontaView.rozwin(rootProjektKonta)}" update=":formrzisuklad:dataList" style="float: left;" />
-                <p:commandButton id="zwinwsz" value="zwiń wszystkie" actionListener="#{pozycjaBRKontaView.zwinwszystkie(rootProjektKonta)}" update=":formrzisuklad:dataList" style="float: left;" />
-                <p:commandButton id="zwinw" value="zwiń poziom" actionListener="#{pozycjaBRKontaView.zwin(rootProjektKonta)}" update=":formrzisuklad:dataList" style="float: left;" />-->
+
 <!--                <p:spacer width="40"/>
                 <p:commandButton value="zapamiętaj" actionListener="#{pozycjaBRKontaView.zaksiegujzmianypozycji('r',pozycjaBRKontaView.wybranyuklad)}" icon="ui-icon-locked" update=":formrzisuklad"/>-->
                 <p:commandButton value="resetuj" actionListener="#{pozycjaBRKontaView.resetujprzyporzadkowanie('r')}" icon="ui-icon-locked" update=":formrzisuklad" style="margin-left: 10px;"/>
@@ -68,7 +65,7 @@
                                 <p:menuitem value="syntetyka" actionListener="#{pozycjaBRKontaView.zwinrzadanalityki(konto)}" global="false" update=":formrzisuklad:dostepnekonta, :formrzisuklad:selected" icon="ui-icon-arrowrefresh-1-w" rendered="#{konto.level != 0}"/>  
                             </p:splitButton>
                             <p:commandButton id="pn2" value="#{konto.pelnynumer} #{konto.nazwapelna}" global="false"
-                                             actionListener="#{pozycjaBRKontaView.onKontoDropR(konto,'r')}" update=":formrzisuklad:dostepnekonta :formrzisuklad:selected"
+                                             actionListener="#{pozycjaBRKontaView.onKontoDropRWzorcowy(konto,'r')}" update=":formrzisuklad:dostepnekonta :formrzisuklad:selected"
                                              style="color: #{konto.level eq 0 ? 'blue' : konto.level eq 1 ? 'green' : konto.level eq 2 ? 'red' : 'black'};"
                                              rendered="#{konto.mapotomkow == false ? (konto.level == 0 ? true : false) : null}">
                             </p:commandButton>
