--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -62,7 +62,7 @@
                 <h:outputText value="Nie skonfigurowano maila firmy. Faktury będą wysyłane z domyślnego maila programu: info@taxman.biz.pl" style="font-weight: 800; color: red;"/>
             </p:panelGrid>
             <p:panel header="dołącz krótką wiadomość do wysyłanego maila" id="panelwiadomosc" >
-                <p:panelGrid columns="4">
+                <p:panelGrid columns="6">
                 <p:commandButton value="+" actionListener="#{fakturaView.pokazedytor(1)}" update="@parent" rendered="#{!fakturaView.podazedytorvar}"/>
                 <p:commandButton value="-" actionListener="#{fakturaView.pokazedytor(0)}" update="@parent" rendered="#{fakturaView.podazedytorvar}"/>
                 <p:editor id="editor"  widgetVar="editorWidget" value="#{fakturaView.wiadomoscdodatkowa}" width="800" height="300" rendered="#{fakturaView.podazedytorvar}">
@@ -75,6 +75,11 @@
                 <p:selectBooleanCheckbox value="#{fakturaView.mailplussms}" itemLabel="wyślij sms" style="margin-left: 100px;">
                     <p:ajax event="change" partialSubmit="true"/>
                 </p:selectBooleanCheckbox>
+                <h:outputText value="stawka ryczałtu do księgowania"  rendered="#{WpisView.ksiegaryczalt eq false}"/>
+                <p:selectOneMenu value="#{fakturaView.stawkaryczaltuksiegowanie}" style="width: 100px;"  rendered="#{WpisView.ksiegaryczalt eq false}">
+                    <f:selectItems value="#{kolmn.stawkiRyczalt}" var="loop" itemLabel="#{loop}" itemValue="#{loop}"/>
+                </p:selectOneMenu>
+            
                 </p:panelGrid>
             </p:panel>
             <p:remoteCommand name="przeliczfiltersporzadzone" actionListener="#{fakturaView.sumawartoscifiltered()}" update=":akordeon:formsporzadzone:panelsum"/>
